syntax = "proto2";

option java_package = "com.appnexus.data.protobuf.generated";

import "includes/enums/view_result_type_enum.proto";
import "includes/enums/view_non_measurable_reason_enum.proto";

message standard_feed {
    optional fixed64 auction_id_64 = 1;
    optional fixed64 date_time = 2;
    optional int32 user_tz_offset = 3;
    optional int32 creative_width = 4;
    optional int32 creative_height = 5;
    optional int32 media_type = 6;
    optional int32 fold_position = 7;
    optional string event_type = 8;
    optional int32 imp_type = 9;
    optional int32 payment_type = 10;
    optional double media_cost_cpm = 11;
    optional int32 revenue_type = 12;
    optional double media_cost = 13;
    optional double buyer_bid = 14;
    optional double ecp = 15;
    optional double eap = 16;
    optional int32 is_imp = 17;
    optional int32 is_learn = 18;
    optional int32 predict_type_rev = 19;
    optional fixed64 user_id_64 = 20;
    optional string ip_address = 21;
    optional string ip_address_trunc = 22;
    optional string country = 23;
    optional string region = 24;
    optional int32 operating_system = 25;
    optional int32 browser = 26;
    optional int32 language = 27;
    optional int32 venue_id = 28;
    optional int32 seller_member_id = 29;
    optional int32 publisher_id = 30;
    optional int32 site_id = 31;
    optional string site_domain = 32;
    optional int32 tag_id = 33;
    optional int32 external_inv_id = 34;
    optional double reserve_price = 35;
    optional double seller_revenue_cpm = 36;
    optional double media_buy_rev_share_pct = 37;
    optional int32 pub_rule_id = 38;
    optional string seller_currency = 39;
    optional string publisher_currency = 40;
    optional double publisher_exchange_rate = 41;
    optional double serving_fees_cpm = 42;
    optional double serving_fees_revshare = 43;
    optional int32 buyer_member_id = 44;
    optional int32 advertiser_id = 45;
    optional int32 brand_id = 46;
    optional int32 advertiser_frequency = 47;
    optional int32 advertiser_recency = 48;
    optional int32 insertion_order_id = 49;
    optional int32 line_item_id = 50;
    optional int32 campaign_id = 51;
    optional int32 creative_id = 52;
    optional int32 creative_freq = 53;
    optional int32 creative_rec = 54;
    optional double cadence_modifier = 55;
    optional int32 can_convert = 56;
    optional int32 user_group_id = 57;
    optional int32 is_control = 58;
    optional double control_pct = 59;
    optional int32 control_creative_id = 60;
    optional int32 is_click = 61;
    optional int32 pixel_id = 62;
    optional int32 is_remarketing = 63;
    optional int32 post_click_conv = 64;
    optional int32 post_view_conv = 65;
    optional double post_click_revenue = 66;
    optional double post_view_revenue = 67;
    optional string order_id = 68;
    optional string external_data = 69;
    optional string pricing_type = 70;
    optional double booked_revenue = 71;
    optional double booked_revenue_adv_curr = 72;
    optional double commission_cpm = 73;
    optional double commission_revshare = 74;
    optional double auction_service_deduction = 75;
    optional double auction_service_fees = 76;
    optional double creative_overage_fees = 77;
    optional double clear_fees = 78 [default = 0];
    optional string buyer_currency = 79;
    optional string advertiser_currency = 80;
    optional double advertiser_exchange_rate = 81;
    optional string latitude = 82;
    optional string longitude = 83;
    optional string device_unique_id = 84;
    optional int32 device_id = 85;
    optional int32 carrier_id = 86;
    optional int32 deal_id = 87;
    optional view_result_type_enum.ViewResultType view_result = 88 [default = UNKNOWN];
    optional string application_id = 89;
    optional int32 supply_type = 90;
    optional string sdk_version = 91 [default = ""];
    optional int32 ozone_id = 92;
    optional int32 billing_period_id = 93 [default = 0];
    optional view_non_measurable_reason_enum.ViewNonMeasurableReason view_non_measurable_reason = 94 [default = UNKNOWN];
    optional string external_uid = 95 [default = "---"];
    optional string request_uuid = 96 [default = "---"];
    optional int32 dma = 97 [default = 0];
    optional int32 city = 98;
    optional int32 mobile_app_instance_id = 99 [default = 0];
    optional string traffic_source_code = 100 [default = "---"];
    optional string external_request_id = 101 [default = "---"];
    optional int32 deal_type = 102;
    optional int32 ym_floor_id = 103;
    optional int32 ym_bias_id = 104;
    optional int32 is_filtered_request = 105;
    optional int32 age = 106;
    optional string gender = 107;
    optional int32 is_exclusive = 108;
    optional int32 bid_priority = 109 [default = 0];
    optional int32 custom_model_id = 110;
    optional fixed64 custom_model_last_modified = 111;
    optional string custom_model_leaf_name = 112 [default = ""];
    optional double data_costs = 113 [default = 0];
    optional int32 device_type = 114 [default = 0];
    optional string postal_code = 115 [default = "---"];
    optional int32 imps_for_budget_caps_pacing = 116 [default = 0];
    optional bytes hashed_user_id_64 = 117 [default = ""];
    optional bytes hashed_device_unique_id = 118 [default = ""];
    optional string latitude_trunc = 119;
    optional string longitude_trunc = 120;
}
